# Rust-Project_Data-scraping

./: Cargo.toml  README.md  html_content.html  output.csv  output.json  output.msgpack  output.toml  output.xml
src/: main.rs
