[package]
name = "Data_Scaper"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = { version = "0.11.2", features = ["blocking"] }
serde_json = "1.0"
scraper = "0.18.0"
tokio = { version = "1", features = ["full"] }
select = "0.6"
cssparser = "0.33.0"
csv = "1.1.6"
rmp-serde = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6.0"
xml = "0.8.0"
quick-xml = "0.31.0"
toml = "0.8.6"
serde_yaml = "0.9.27"
